--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "chai": "^4.3.10",
     "eslint": "^8.37.0",
     "ethers": "^6.9.0",
-    "hardhat": "^2.22.6",
+    "hardhat": "^2.22.7",
     "solhint": "^5.0.1",
     "solidity-coverage": "^0.8.12",
     "ts-node": "10.9.1",
@@ -43,6 +43,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.8",
+    "hardhat-gas-reporter": "^1.0.9",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.11",
