--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,13 @@
     "target": "es2022",
     "module": "node16",
     "moduleResolution": "NodeNext",
-    "allowImportingTsExtensions": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strictPropertyInitialization": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "declaration": true
   }
 }
