update packages and install zdc

--- a/package.json
+++ b/package.json
@@ -26,28 +26,29 @@
     "check-coverage": "istanbul check-coverage --statements 90 --branches 87 --functions 89 --lines 90"
   },
   "devDependencies": {
-    "@zero-tech/eslint-config-cpt": "0.2.7",
-    "@openzeppelin/contracts": "^5.0.2",
-    "chai": "^4.3.10",
-    "eslint": "^8.37.0",
-    "ethers": "^6.9.0",
-    "hardhat": "^2.22.7",
-    "solhint": "^5.0.1",
-    "solidity-coverage": "^0.8.12",
-    "ts-node": "10.9.1",
-    "typechain": "^8.3.2",
-    "typescript": "^5.0.2",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.8",
-    "hardhat-gas-reporter": "^1.0.9",
+    "@openzeppelin/contracts": "^5.0.2",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^9.1.0",
     "@types/node": "^18.15.11",
-    "dotenv": "16.0.3"
+    "@zero-tech/eslint-config-cpt": "0.2.7",
+    "@zero-tech/zdc": "0.1.6",
+    "chai": "^4.3.10",
+    "dotenv": "16.0.3",
+    "eslint": "^8.37.0",
+    "ethers": "^6.9.0",
+    "hardhat": "^2.22.7",
+    "hardhat-gas-reporter": "^1.0.9",
+    "solhint": "^5.0.1",
+    "solidity-coverage": "^0.8.12",
+    "ts-node": "10.9.1",
+    "typechain": "^8.3.2",
+    "typescript": "^5.0.2"
   }
 }
