--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "typechain": "hardhat typechain",
     "test": "hardhat test",
     "coverage": "hardhat coverage",
-    "check-coverage": "istanbul check-coverage --statements 90 --branches 87 --functions 89 --lines 90"
+    "check-coverage": "istanbul check-coverage --statements 90 --branches 87 --functions 89 --lines 90",
+    "mongo:start": "docker-compose up -d",
+    "mongo:stop": "docker-compose stop",
+    "mongo:down": "docker-compose down",
+    "mongo:drop": "ts-node src/utils/drop-db.ts",
+    "pretest": "yarn mongo:start",
+    "posttest": "yarn mongo:stop"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
