--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "compile": "hardhat compile",
     "lint-sol": "yarn solhint ./contracts/**/*.sol",
     "lint-ts": "yarn eslint ./test/** ./src/**",
-    "lint": "yarn lint-sol & yarn lint-ts --no-error-on-unmatched-pattern",
+    "lint": "yarn lint-sol && yarn lint-ts --no-error-on-unmatched-pattern",
     "clean": "hardhat clean",
     "build": "yarn run clean && yarn run compile",
     "typechain": "hardhat typechain",
